# VALL-E

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  DELAY_CYCLES_IMPLEMENTATION.md  FIRMWARE_AUDIT_REPORT.md  README.md
firmware/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  STM32G474.svd  VALL-E_Firmware.ioc  refactor_interfaces.py  structure.txt
firmware/Apps/adc_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/Apps/current_controller/: app.cpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/Apps/hello_world/: app.cpp  app.hpp  app_isr_bindings.hpp  app_log_config.hpp  app_system_config.hpp  main.cpp
firmware/Apps/pwm_test/: app.cpp  app.hpp  app_system_config.hpp  main.cpp
firmware/Apps/sandbox/: app_log_config.hpp
firmware/Apps/vca_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  isr_bindings.cpp  main.cpp  system_hardware.cpp  system_hardware.hpp
firmware/Common/Inc/Valle/: core.hpp  system_build.hpp
firmware/Common/Inc/Valle/Core/: app_bridge.hpp  clock.hpp  core.hpp  error.hpp  logging.hpp  sync.hpp  timing.hpp
firmware/Common/Inc/Valle/Device/: device.hpp
firmware/Common/Inc/Valle/Drivers/: adc.hpp  gpio.hpp  i2c.hpp  uart_logger.hpp
firmware/Common/Inc/Valle/Math/: converters.hpp  fitting.cpp  matrix.hpp
firmware/Common/Inc/Valle/Modules/: acs724.hpp  ldc1612.hpp
firmware/Common/Inc/Valle/System/: config.hpp  hardware.hpp
firmware/Common/Inc/Valle/utils/: enum_utils.hpp  source_location.hpp  timing.hpp
firmware/Common/Inc/valle/: pch.hpp  platform.h
firmware/Common/Inc/valle/Device/: device.hpp  device_core.hpp  registry.hpp
firmware/Common/Inc/valle/Drivers/: hrtim_half_bridge.hpp
firmware/Common/Inc/valle/Modules/: vca.hpp
firmware/Common/Inc/valle/Policy/: hrtim.hpp
firmware/Common/Inc/valle/utils/: hal_utils.hpp  stl_utils.hpp  template_utils.hpp
firmware/Common/Src/Core/: clock.cpp  core.cpp  error.cpp  logger.cpp  timing.cpp
firmware/Common/Src/Device/: board.hpp  device.cpp
firmware/Common/Src/Device/Devices/: adc.cpp  dma.cpp  hrtim.cpp  i2c.cpp  uart.cpp
firmware/Common/Src/Policy/: hrtim.cpp
firmware/Common/Src/System/: hardware.cpp
firmware/Core/Inc/: app_bridge.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/Core/Src/: main.c  stm32g4xx_it.c
firmware/Drivers/: CMakeLists.txt
firmware/Platform/Src/: main.cpp
firmware/apps/adc_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/apps/amt102_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_log_config.hpp  app_system_config.hpp  main.cpp
firmware/apps/current_controller/: app.cpp  app.hpp  app_isr.cpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/apps/hello_world/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/apps/pwm_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/apps/sandbox/: app.cpp  app.hpp  app_isr_bindings.hpp  app_platform_config.hpp  app_system_config.hpp  main.cpp
firmware/base/: pch.hpp
firmware/base/inc/valle/utils/: atomic.hpp  timing.hpp
firmware/ci/: build_all_presets.py
firmware/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmware/common/: pch.hpp
firmware/common/inc/valle/: core.hpp
firmware/common/inc/valle/core/: app_bridge.hpp  atomic.hpp  error.hpp  logging.hpp  timing.hpp
firmware/common/inc/valle/math/: matrix.hpp
firmware/common/inc/valle/modules/: acs724.hpp  amt10x.hpp  ldc1612.hpp  vca.hpp
firmware/common/inc/valle/utils/: circular_queue.hpp  enum_utils.hpp  source_location.hpp
firmware/common/src/: core.cpp  main.cpp
firmware/common/src/core/: logger.cpp
firmware/common/src/core/system/: hardware.cpp
firmware/platform/stm32/g474xx/: flash.ld  pch.hpp  thirdparty.cmake
firmware/src/: CMakeLists.txt  main.cpp
firmware/src/apps/: CMakeLists.txt
firmware/src/apps/adc_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/amt102_test/: app.cpp  app.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/common/: CMakeLists.txt
firmware/src/apps/common/platform/: CMakeLists.txt
firmware/src/apps/common/shared/: CMakeLists.txt
firmware/src/apps/common/src/: system_build.cpp
firmware/src/apps/crank_encoder_calibration/: app.cpp  app.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/current_controller/: app.cpp  app.hpp  app_isr.cpp  app_isr_bindings.hpp  app_platform_config.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/double_valve_current_controller_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/fdr/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/hello_world/: app.cpp  app_isr_bindings.hpp  app_log_config.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/ldc161x_calibration/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/ldc161x_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_platform_config.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/position_controller/: app.cpp  app.hpp  app_isr_bindings.hpp  app_log_config.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/pwm_test/: app.cpp  app.hpp  app_isr_bindings.hpp  app_platform_config.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/sandbox/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/src/apps/symposium_demo/: app.cpp  app.hpp  app_isr_bindings.hpp  app_system_config.hpp  main.cpp
firmware/src/base/: CMakeLists.txt  pch.h
firmware/src/base/inc/valle/: app_bridge.hpp
firmware/src/base/src/base/: logger.cpp
firmware/src/platform/: CMakeLists.txt
firmware/src/platform/stm32/g474xx/: pch.h
firmware/src/system/: CMakeLists.txt
firmware/src/system/src/: init.cpp
firmware/system/inc/valle/: error.hpp  logging.hpp  timing.hpp
firmware/system/src/: hardware.cpp  main.cpp
(+434 files in other folders)
